[tool.poetry]
name = "lib_siiau"
version = "0.1.0"
description = "Extrae información de alumnos y profesores de la Universidad de Guadalajara"
authors = ["kirbylife <gabriel13m@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
